After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772557 - batch-rename: Sorting by creation date is not working
batch-rename: Sorting by creation date is not working
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-07 10:19 UTC by Alexandru Pandelea
Modified: 2016-10-08 16:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
batch-rename-dialog: Fix sorting by creation date (1.30 KB, patch)
2016-10-07 10:20 UTC, Alexandru Pandelea
committed Details | Review

Description Alexandru Pandelea 2016-10-07 10:19:38 UTC
Sorting by creation date is not working.
Comment 1 Alexandru Pandelea 2016-10-07 10:20:14 UTC
Created attachment 337144 [details] [review]
batch-rename-dialog: Fix sorting by creation date

The sorting by creation date is not working anymore, because the hash
table passed to the sorting function is NULL.

To fix this, instead of NULL, pass the hash table with the order of
the files for this sorting criteria.
Comment 2 Carlos Soriano 2016-10-07 12:48:26 UTC
Review of attachment 337144 [details] [review]:

oh, this is me right?

Thanks!
Comment 3 Alexandru Pandelea 2016-10-08 16:53:21 UTC
Attachment 337144 [details] pushed as 2778274 - batch-rename-dialog: Fix sorting by creation date