batch-rename-dialog: Fix sorting by creation date

The sorting by creation date is not working anymore, because the hash
table passed to the sorting function is NULL.

To fix this, instead of NULL, pass the hash table with the order of
the files for this sorting criteria.

https://bugzilla.gnome.org/show_bug.cgi?id=772557